--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   In this blog i will share posts about experiences and any other thoughs regarding Product Management
   with the hope that the me of the future can do a good retrospective and also that other folks who read it
   can use some of the things mentioned here. 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://ebuzz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: elerickav
 github_username:  ebuzz
 
